# LearningDirectX12

./: .gitignore  LatexMath.MD  README.md
Blank/: CMakeLists.txt  main - 副本.cpp  main.cpp
Blank - 副本/: CMakeLists.txt  imgui.ini  main.cpp
Blank - 副本/Shaders/: color.hlsl
Blank/Shaders/: color.hlsl
ComputeShaderGIF/: CMakeLists.txt  ComputeShaderGIF.cpp  ComputeShaderGIF.h  ShapesApp.cap  compileshader.bat  compileshader_debug.bat  d3dApp.cpp  d3dApp.h  imgui.ini  main.cpp
ComputeShaderGIF/Common/: FrameResources.cpp  FrameResources.h  GeometryGenerator.cpp  WICUtils.h  d3dUtil.cpp  d3dUtil.h
ComputeShaderGIF/Shaders/: ProcessGIF_CS.hlsl
DemoApp/: CMakeLists.txt  compileshader_debug.bat  d3dApp.cpp  demoApp.cpp  demoApp.h  imgui.ini  main.cpp
DemoApp/Common/: FrameResources.cpp  FrameResources.h  GeometryGenerator.cpp  GeometryGenerator.h  WICUtils.h  d3dUtil.cpp  d3dUtil.h
DemoApp/Shaders/: LightUtil.hlsl  LightingUtil.hlsl  color.hlsl
LandAndWaves/: CMakeLists.txt  LandAndWaves.cpp  LandAndWaves.h  d3dApp.cpp  d3dApp.h  imgui.ini
LandAndWaves/Common/: FrameResources.cpp  FrameResources.h  GeometryGenerator.cpp  UploadBuffer.h  WICUtils.h  d3dUtil.h
LandAndWaves/Shaders/: color.hlsl
ShapesApp/: CMakeLists.txt  ShapesApp.cpp  ShapesApp.h  compileshader_debug.bat  d3dApp.h
ShapesApp/Common/: FrameResources.h  WICUtils.h
ShapesApp/Shaders/: color.hlsl
